--- a/d012/estilo/style.css
+++ b/d012/estilo/style.css
@@ -1,5 +1,15 @@
 @charset "UTF-8";
 
+@import url('https://fonts.googleapis.com/css2?family=Amatic+SC:wght@700&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
+
+:root {
+    --fonte1: verdana, geneva, tahoma, sans-serf;
+    --fonte2: 'Amatic SC', cursive;
+    --fonte3: 'Cookie', cursive;
+}
+
 * {
     margin: 0px;
     padding: 0px;
@@ -8,6 +18,7 @@
 html, body {
     min-height: 100vh;
     background-color: darkgrey;
+    font-family: var(--fonte1);
 }
 
 header {
@@ -19,6 +30,8 @@ header {
 header > h1 {
     padding-top: 50px;
     font-variant: small-caps;
+    font-family: var(--fonte2);
+    font-size: 6em;
 }
 
 header > p {
@@ -30,6 +43,7 @@ header a, footer a {
     color: white;
     text-decoration: none;
     font-weight: bolder;
+
 }
 
 header a:hover, footer a:hover {
@@ -41,6 +55,12 @@ section {
     padding-bottom: 10vh;
     line-height: 2em;
     padding-left: 30px;
+    font-family: var(--fonte3);
+    font-size: 1.8em;
+}
+
+section > p {
+    padding-bottom: 2em;
 }
 
 section.normal {
@@ -51,12 +71,30 @@ section.normal {
 section.imagem {
     background-color: rgb(77, 77, 77);
     color: white;
+    box-shadow: 6px 6px 13px 0px rgba(0, 0, 0, 0.575);
+    background-attachment: fixed;
 }
 
 section.imagem > p {
-    width: 200px;
-    background-color: rgba(0, 0, 0, 0.603);
+    display: inline-block;
+    padding: 5px;
+    background-color: rgba(0, 0, 0, 0.658);
+    text-shadow: 1px 1px 0px black;
+    
 }
+
+section#img01 {
+    background-image: url('../imagens/background001.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02 {
+    background-image: url('../imagens/background002.jpg');
+    background-position: right center;
+    background-size: cover;
+}
+
 
 footer {
     background-color: black;
